[gd_scene load_steps=27 format=2]

[ext_resource path="res://enemy/Monsters_Creatures_Fantasy/Mushroom/Attack.png" type="Texture" id=1]
[ext_resource path="res://enemy/Monsters_Creatures_Fantasy/Mushroom/Idle.png" type="Texture" id=2]
[ext_resource path="res://enemy/Mushroom.gd" type="Script" id=3]
[ext_resource path="res://enemy/Monsters_Creatures_Fantasy/Mushroom/Run.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ SubResource( 7 ), SubResource( 9 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=13]
radius = 4.0
height = 22.0

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 33, 50.6875 )

[sub_resource type="CircleShape2D" id=23]
radius = 156.263

[node name="Mushroom" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -26 )
frames = SubResource( 12 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 13 )

[node name="RightAttack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightAttack"]
self_modulate = Color( 0.933333, 0.360784, 1, 1 )
position = Vector2( 33, -6 )
shape = SubResource( 14 )

[node name="LeftAttack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftAttack"]
self_modulate = Color( 0.933333, 0.360784, 1, 1 )
position = Vector2( -33, -6 )
shape = SubResource( 14 )

[node name="DetectHero" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectHero"]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 1, 12 )
rotation = 1.5708
scale = Vector2( 0.8, 1 )
shape = SubResource( 23 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="RightAttack" to="." method="_on_RightAttack_body_entered"]
[connection signal="body_exited" from="RightAttack" to="." method="_on_RightAttack_body_exited"]
[connection signal="body_shape_entered" from="RightAttack" to="." method="_on_RightAttack_body_shape_entered"]
[connection signal="body_shape_exited" from="RightAttack" to="." method="_on_RightAttack_body_shape_exited"]
[connection signal="body_entered" from="LeftAttack" to="." method="_on_LeftAttack_body_entered"]
[connection signal="body_exited" from="LeftAttack" to="." method="_on_LeftAttack_body_exited"]
[connection signal="body_entered" from="DetectHero" to="." method="_on_DetectHero_body_entered"]
